--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
     <display-name>HealthHubUTM</display-name>
 
-    <!-- Spring DispatcherServlet -->
+    <!-- Dispatcher loads EVERYTHING -->
     <servlet>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
